--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -17,13 +17,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?v3.0.22",
+    "@dcloudio/uni-cli-shared": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-cli-shared-v3.0.22.tgz",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-compiler?v3.0.22",
-    "@dcloudio/vite-plugin-uni": "https://gitpkg.vercel.app/txlct/uniapp/packages/vite-plugin-uni?v3.0.22",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vue?v3.0.22",
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?v3.0.22",
-    "@dcloudio/uni-mp-weixin": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-weixin?v3.0.22",
+    "@dcloudio/uni-mp-compiler": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-mp-compiler-v3.0.22.tgz",
+    "@dcloudio/vite-plugin-uni": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/vite-plugin-uni-v3.0.22.tgz",
+    "@dcloudio/uni-mp-vue": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-mp-vue-v3.0.22.tgz",
+    "@dcloudio/uni-shared": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-shared-v3.0.22.tgz",
+    "@dcloudio/uni-mp-weixin": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-mp-weixin-v3.0.22.tgz",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
