--- a/packages/uni-cli-shared/package.json
+++ b/packages/uni-cli-shared/package.json
@@ -26,7 +26,7 @@
     "@babel/parser": "^7.20.5",
     "@babel/types": "^7.20.7",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?v3.0.22",
+    "@dcloudio/uni-shared": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-shared-v3.0.22.tgz",
     "@intlify/core-base": "9.1.9",
     "@intlify/shared": "9.1.9",
     "@intlify/vue-devtools": "9.1.9",
