--- a/packages/uni-components/package.json
+++ b/packages/uni-components/package.json
@@ -18,7 +18,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?v3.0.22",
+    "@dcloudio/uni-shared": "https://xqh-1257029999.cos.ap-guangzhou.myqcloud.com/uni-shared-v3.0.22.tgz",
     "@types/quill": "^1.3.7"
   }
 }
