--- a/packages/uni-app/package.json
+++ b/packages/uni-app/package.json
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "@dcloudio/uni-cloud": "3.0.0-3070320230222002",
-    "@dcloudio/uni-components": "workspace:*",
+    "@dcloudio/uni-components": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-components?feature/mp-chunk",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
     "@dcloudio/uni-push": "3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "workspace:*",
+    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
     "@dcloudio/uni-stat": "3.0.0-3070320230222002",
     "@vue/shared": "3.2.47"
   },
