--- a/packages/uni-mp-compiler/package.json
+++ b/packages/uni-mp-compiler/package.json
@@ -22,8 +22,8 @@
     "@babel/generator": "^7.20.5",
     "@babel/parser": "^7.20.5",
     "@babel/types": "^7.20.7",
-    "@dcloudio/uni-cli-shared": "workspace:*",
-    "@dcloudio/uni-shared": "workspace:*",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?feature/mp-chunk",
+    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
     "@vue/compiler-core": "3.2.47",
     "@vue/compiler-dom": "3.2.47",
     "@vue/shared": "3.2.47",
