--- a/packages/uni-mp-weixin/package.json
+++ b/packages/uni-mp-weixin/package.json
@@ -30,10 +30,10 @@
     "@vue/compiler-core": "3.2.47"
   },
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "workspace:*",
-    "@dcloudio/uni-mp-vite": "workspace:*",
-    "@dcloudio/uni-mp-vue": "workspace:*",
-    "@dcloudio/uni-shared": "workspace:*",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?feature/mp-chunk",
+    "@dcloudio/uni-mp-vite": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vite?feature/mp-chunk",
+    "@dcloudio/uni-mp-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vue?feature/mp-chunk",
+    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
     "@vue/shared": "3.2.47",
     "jimp": "^0.10.1",
     "licia": "^1.29.0",
