--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -17,13 +17,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?feature/mp-chunk",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-compiler?feature/mp-chunk",
-    "@dcloudio/vite-plugin-uni": "https://gitpkg.vercel.app/txlct/uniapp/packages/vite-plugin-uni?feature/mp-chunk",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vue?feature/mp-chunk",
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
-    "@dcloudio/uni-mp-weixin": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-weixin?feature/mp-chunk",
+    "@dcloudio/uni-mp-compiler": "workspace:*",
+    "@dcloudio/vite-plugin-uni": "workspace:*",
+    "@dcloudio/uni-mp-vue": "workspace:*",
+    "@dcloudio/uni-shared": "workspace:*",
+    "@dcloudio/uni-mp-weixin": "workspace:*",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
