--- a/packages/uni-h5/package.json
+++ b/packages/uni-h5/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-h5",
-  "version": "3.0.0-3070320230222002-v3.0.22",
+  "version": "3.0.0-3070320230222002-v3.0.23",
   "description": "@dcloudio/uni-h5",
   "main": "./dist/uni-h5.cjs.js",
   "module": "./dist/uni-h5.es.js",
@@ -29,10 +29,10 @@
     "main": "dist/uni.compiler.js"
   },
   "dependencies": {
-    "@dcloudio/uni-h5-vite": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-h5-vite?feature/mp-chunk",
-    "@dcloudio/uni-h5-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-h5-vue?feature/mp-chunk",
+    "@dcloudio/uni-h5-vite": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-h5-vite-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/uni-h5-vue": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-h5-vue-3.0.0-3070320230222002-v3.0.23.tgz",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
+    "@dcloudio/uni-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-shared-3.0.0-3070320230222002-v3.0.23.tgz",
     "@vue/server-renderer": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3",
@@ -45,7 +45,7 @@
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.8",
-    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?feature/mp-chunk",
+    "@dcloudio/uni-cli-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-cli-shared-3.0.0-3070320230222002-v3.0.23.tgz",
     "@types/estree": "^0.0.51",
     "@types/google.maps": "^3.45.6",
     "acorn-loose": "^8.2.1",
