--- a/packages/uni-mp-compiler/package.json
+++ b/packages/uni-mp-compiler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-compiler",
-  "version": "3.0.0-3070320230222002-v3.0.22",
+  "version": "3.0.0-3070320230222002-v3.0.23",
   "description": "uni-mp-compiler",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,8 +22,8 @@
     "@babel/generator": "^7.20.5",
     "@babel/parser": "^7.20.5",
     "@babel/types": "^7.20.7",
-    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?feature/mp-chunk",
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
+    "@dcloudio/uni-cli-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-cli-shared-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/uni-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-shared-3.0.0-3070320230222002-v3.0.23.tgz",
     "@vue/compiler-core": "3.2.47",
     "@vue/compiler-dom": "3.2.47",
     "@vue/shared": "3.2.47",
