--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-vite",
-  "version": "3.0.0-3070320230222002-v3.0.22",
+  "version": "3.0.0-3070320230222002-v3.0.23",
   "description": "uni-mp-vite",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,13 +17,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "workspace:*",
+    "@dcloudio/uni-cli-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-cli-shared-3.0.0-3070320230222002-v3.0.23.tgz",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "workspace:*",
-    "@dcloudio/vite-plugin-uni": "workspace:*",
-    "@dcloudio/uni-mp-vue": "workspace:*",
-    "@dcloudio/uni-shared": "workspace:*",
-    "@dcloudio/uni-mp-weixin": "workspace:*",
+    "@dcloudio/uni-mp-compiler": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-mp-compiler-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/vite-plugin-uni": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-vite-plugin-uni-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/uni-mp-vue": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-mp-vue-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/uni-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-shared-3.0.0-3070320230222002-v3.0.23.tgz",
+    "@dcloudio/uni-mp-weixin": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-mp-weixin-3.0.0-3070320230222002-v3.0.23.tgz",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
