--- a/packages/uni-mp-vue/package.json
+++ b/packages/uni-mp-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-vue",
-  "version": "3.0.0-3070320230222002-v3.0.22",
+  "version": "3.0.0-3070320230222002-v3.0.23",
   "description": "@dcloudio/uni-mp-vue",
   "main": "dist/vue.runtime.esm.js",
   "module": "dist/vue.runtime.esm.js",
@@ -20,10 +20,10 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/mp-chunk",
+    "@dcloudio/uni-shared": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-shared-3.0.0-3070320230222002-v3.0.23.tgz",
     "@vue/shared": "3.2.47"
   },
   "devDependencies": {
-    "@dcloudio/uni-mp-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vue?feature/mp-chunk"
+    "@dcloudio/uni-mp-vue": "https://github.com/txlct/uniapp/releases/download/v3.0.23-alpha/dcloudio-uni-mp-vue-3.0.0-3070320230222002-v3.0.23.tgz"
   }
 }
